# zeppelin

./: .gitignore  README.md  index.html  params.json
Blueprints/: Feather.dwg  Feather_Motor_Cover.dwg  assembled balloon aniation.max  baloon.dwg  dirajuble_01.3DS  dirajuble_01.max  dirajuble_02.3DS  dirajuble_02.max  parts.dwg  wrap.dwg
Blueprints/3draft/: 3draft.dwg
Blueprints/Nest/: Protype.dwg  Sticker.ai  iconVariants.ai  icons.ai  mode_icons.dwg  prototype.psd  stick.dwg  stick3d.dwg
Blueprints/Renders/: assembled_balloon.blend
Blueprints/parts/: feather_motor.stl  feather_motor_cover.stl  feather_screw.stl  feather_servo.stl  feather_servo_cover.stl
Circuits/Config/: default.dru
Circuits/Connector/: Connector.brd  Connector.sch  eagle.epf
Circuits/Feather/: Feather.brd  Feather.sch  eagle.epf
Circuits/Keel/: Keel.brd  Keel.sch  eagle.epf
Circuits/Libs/: pinhead.lbr  rf24.lbr
Circuits/Nest/: Nest.brd  Nest.sch  eagle.epf
Documents/Blueprints/: Film.txt  about.txt  airship.py  calculations.xlsx
Documents/Circuits/: to buy.txt
Documents/Software/: ToImplement
Libraries/: STM32WBxx_CM4.svd  st_nucleo_wb55.cfg
Libraries/Software/: stm32l011f4.ld  stm32wb55rg-wFlash.ld  stm32wb55rg.ld  toolchain.cmake
Libraries/Software/CMSIS/: CMakeLists.txt
Libraries/Software/STM32L0xx_HAL_Driver/: CMakeLists.txt
Libraries/Software/STM32WBxx_HAL_Driver/: CMakeLists.txt
Libraries/Software/nrf24/: CMakeLists.txt  nrf24.c  nrf24.h  nrf24_hal.c  nrf24_hal.h
Libraries/Software/printf/: CMakeLists.txt
Libraries/Software/protocol/: CMakeLists.txt  protocol.c  protocol.h  protocol.md
Libraries/Software/terminal/: CMakeLists.txt  readme.md  terminal.c  terminal.h
Modules/Beacon/: CMakeLists.txt  readme.md
Modules/Beacon/Hardware/Beacon/: beacon.brd  beacon.sch  eagle.epf
Modules/Beacon/Software/: .cproject  .project  Beacon.ioc  CMakeLists.txt  STM32L011F4PX_FLASH.ld
Modules/Beacon/Software/Core/Inc/: stm32l0xx_hal_conf.h  stm32l0xx_it.h
Modules/Beacon/Software/Core/Src/: main.c  nrf24.c  nrf24.h  nrf24_hal.c  nrf24_hal.h  nrf24_hw_conf.h  program.c  program.h  stm32l0xx_hal_msp.c  stm32l0xx_it.c
Modules/Beacon/Software/config/: printf_config.h  stm32l0xx_hal_conf.h
Modules/Beacon/Software/src/: boot.c  hal_msp.c  main.c  main.h  program.c  program.h  system_stm32l0xx.c
Modules/Beacon/Software/src/config/: stm32l0xx_hal_conf.h
Modules/Beacon/config/: nrf24_hw_conf.h  printf_config.h
Modules/Beacon/src/: hal_msp.c  main.c  main.h  program.c  program.h
Modules/Feather/: CMakeLists.txt
Modules/Feather/Software/: CMakeLists.txt
Modules/Feather/config/: stm32l0xx_hal_conf.h
Modules/Feather/src/: boot.c  configurablevalues.h  dynamicvalues.c  dynamicvalues.h  hal_msp.c  main.c  main.h  motor.h  program.c  program.h  servo.c
Modules/Keel/: CMakeLists.txt
Modules/Keel/Software/: CMakeLists.txt
Modules/Keel/Software/config/: nrf24_hw_conf.h  stm32l0xx_hal_conf.h
Modules/Keel/Software/src/: boot.c  configurablevalues.c  configurablevalues.h  dendrite.c  dynamicvalues.c  dynamicvalues.h  hal_msp.c  keel.c  keel.h  main.c  main.h  nrf24 notes.md  program.c  program.h
Modules/Keel/config/: stm32l0xx_hal_conf.h
Modules/Keel/src/: boot.c  configurablevalues.c  (+9 more)
Modules/Nest/: CMakeLists.txt
Modules/Nest/config/: stm32wbxx_hal_conf.h
Modules/Nest/src/: bleapp.c  bleapp.h  boot.c  boot.h  interrupts.c  main.c  main.h  msp.c  wpanapp.c  wpanapp.h
Modules/Nest/src/ble/: constants.h  structs.h
Modules/Nest/src/trash_from_st/inc/: app_common.h  app_conf.h  hw_conf.h  main.h  stm32wbxx_it.h
Modules/Nest/src/trash_from_st/sequencer/: stm32_seq.c
Modules/Nest/src/trash_from_st/src/: app_entry.c  hw_uart.c  main.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c  sysmem.c
Modules/Nest/src/trash_from_st/src/ble/: ble.c  manufacturer.c  services.c
Modules/Nest/src/trash_from_st/wpan/: app_ble.c  app_ble.c2  app_ble.h  ble_conf.h  p2p_client_app.c  p2p_client_app.h
Modules/Nest/src/trash_from_st/wpan_middleware/ble/core/: ble_bufsize.h  ble_defs.h  ble_legacy.h
Modules/Nest/src/trash_from_st/wpan_middleware/ble/core/auto/: ble_events.h  ble_gap_aci.h  ble_gatt_aci.c  ble_gatt_aci.h  ble_hal_aci.h  ble_types.h
Modules/Nest/src/trash_from_st/wpan_middleware/interface/: hw.h
Modules/Nest/src/trash_from_st/wpan_middleware/interface/shci/: shci.c  shci.h
Modules/Nest/src/trash_from_st/wpan_middleware/interface/tl/: hci_tl.c  mbox_def.h  shci_tl.c  tl.h  tl_mbox.c
Outfiles/: ATTiny25-'Z4'.eep
Outfiles/Blueprints/: Feather_cover2_print.stl  Feather_cover_print.stl
Outfiles/Software/: ATTiny2313-Keel.hex  ATTiny25-'Z1'.eep  ATTiny25-'Z2'.eep  ATTiny25-'Z3'.eep  ATTiny25-Feather.hex  ATTiny25-Keel.hex  upload_feather.bat  upload_keel.bat
Schematic/: README.md  eagle.epf  eurocircuits.dru  feather.brd  feather.sch  group-bare.brd  group.brd  keel.brd  keel.sch  probe.brd  probe.sch  wedirekt.dru
Schematic/Libraries/: con-pinhead-2mm.lbr  con-pinhead.lbr  con-samtec-FTSH.lbr  irf-2.lbr  led.lbr  logo.lbr  nrf24.lbr  probe.lbr  st.lbr  switch.lbr
Software/: .gitignore  Target.bat  ZepelinTranssmitter1.sln  ZepelinTranssmitter1.uvgui.Teivaz  ZepelinTranssmitter1.uvopt  ZepelinTranssmitter1.uvproj  ZepelinTranssmitter1_Target.dep  protocol.md
Software/Feather/: Feather.atsln  Feather.cproj  Feather.map  Feather.sln  Feather.uvgui.Teivaz  Feather.uvopt  Feather.uvproj  Feather.vcxproj  Feather.vcxproj.filters  Feather_Target.dep  Target.bat  upload.bat
Software/Keel/: Keel.atsln  Keel.c  Keel.cproj  main.c  main.h  readme  upload.bat  upload_debug.bat  upload_release.bat
Software/Libs/: SystemConfig.h  nRF24L01.h  types.h  utils.h
Software/Nest/: BuildAndRun.bat  Nest.atsln  Nest.cppproj  Nest.cproj  Nest.sln  Nest.uvgui.Teivaz  Nest.uvopt  Nest.uvproj  Nest_Target.dep  Target.bat  Test.atsln  Test.cproj  WriteFlash.bat  upload.bat
Software/Source/: SoftSpiPhy.c
Software/tool/: avrdude-mac.conf  avrdude.conf  unload_apple_driver.sh  upload_attiny2313.bat  upload_attiny25.bat  upload_attmega16.bat
stylesheets/: stylesheet.css
(+61 files in other folders)
